--- a/FlyMeHard.html
+++ b/FlyMeHard.html
@@ -55,6 +55,7 @@
         <li><i class="fas fa-users"></i>Team Size: 1</li>
         <li><i class="fas fa-clock"></i>Time frame: 8 months</li>
         <li><i class="fas fa-wrench"></i>Engine: Unity (C#)</li>
+        <li><i class="fas fa-chrome"></i>Platform: Web</li>
       </ul>
     </div>
   </div>
