--- a/Mukti.html
+++ b/Mukti.html
@@ -63,6 +63,7 @@
         <li><i class="fas fa-users"></i>Team Size: 15</li>
         <li><i class="fas fa-clock"></i>Time frame: 3 months</li>
         <li><i class="fas fa-wrench"></i>Engine: Unreal (C++)</li>
+        <li><i class="fas fa-gamepad"></i>Platform: Ps5</li>
       </ul>
     </div>
   </div>
