--- a/StoryPix.html
+++ b/StoryPix.html
@@ -61,6 +61,7 @@
         <li><i class="fas fa-users"></i>Team Size: 9</li>
         <li><i class="fas fa-clock"></i>Time frame: 1 years</li>
         <li><i class="fas fa-wrench"></i>Engine: Unity (C#)</li>
+        <li><i class="fas fa-android"></i>Platform: Android</li>
       </ul>
     </div>
   </div>
