--- a/index.html
+++ b/index.html
@@ -323,10 +323,10 @@
       <div class="image-wrapper"
            style="background-image:url('assets/FlyingMan_Profile.png')">
         <div class="image-overlay">
-          <div class="icon"><i class="fas fa-users"></i><span>1</span></div>
-          <div class="icon"><i class="fas fa-clock"></i><span>8 months</span></div>
+          <div class="icon"><i class="fas fa-users"></i><span>4</span></div>
+          <div class="icon"><i class="fas fa-clock"></i><span>3 months</span></div>
           <div class="icon"><i class="fas fa-wrench"></i><span>Unity (C#)</span></div>
-          <div class="icon"><i class="fab fa-chrome"></i><span>WebGL</span></div> 
+          <div class="icon"><i class="fab fa-android"></i><span>Android</span></div> 
         </div>
       </div>
       <div class="info">
@@ -334,9 +334,7 @@
           <h3>Flying man (2022)</h3>
           <p>Game Programmer</p>
           <p class="description">
-            Fly Me Hard is a fast-paced, physics-driven action game where you play as a jetpack-wielding cowboy fighting through waves of goblins, 
-            skeletons, and magical foes across medieval landscapes. As the Sole Developer, I built core mechanics such as active ragdoll physics, 
-            dynamic enemy AI, and more.
+            A fun and fast-paced hyper-casual game where you have the thrilling ability to fly and compete against AI rivals across a variety of dynamic maps. Each level brings new challenges, and a rewarding system keeps you coming back for more!
           </p>
         </div>
         <div class="arrow"><i class="fas fa-chevron-right"></i></div>
@@ -347,20 +345,21 @@
       <div class="image-wrapper"
            style="background-image:url('assets/TunningSamurai_Profile.png')">
         <div class="image-overlay">
-          <div class="icon"><i class="fas fa-users"></i><span>1</span></div>
-          <div class="icon"><i class="fas fa-clock"></i><span>8 months</span></div>
+          <div class="icon"><i class="fas fa-users"></i><span>2</span></div>
+          <div class="icon"><i class="fas fa-clock"></i><span>2 days</span></div>
           <div class="icon"><i class="fas fa-wrench"></i><span>Unity (C#)</span></div>
-          <div class="icon"><i class="fab fa-chrome"></i><span>WebGL</span></div> 
+          <div class="icon"><i class="fas fa-desktop"></i><span>PC</span></div> 
         </div>
       </div>
       <div class="info">
         <div class="text">
-          <h3>TunningSamurai (2023)</h3>
-          <p>Indie Developer (Crazy games, Android)</p>
+          <h3>TunningSamurai (2022)</h3>
+          <p>Game Developer (Game Jam)</p>
           <p class="description">
-            Fly Me Hard is a fast-paced, physics-driven action game where you play as a jetpack-wielding cowboy fighting through waves of goblins, 
-            skeletons, and magical foes across medieval landscapes. As the Sole Developer, I built core mechanics such as active ragdoll physics, 
-            dynamic enemy AI, and more.
+            This Game is about a Samurai apprentice in training. 
+            Your Master has instructed you to train while wearing blinders 
+            where you listen to frequencies near you which are represented through (sin waves and 3D sounds) in order to attack toward enemy if you
+            are not able to match sounds then you are fail.
           </p>
         </div>
         <div class="arrow"><i class="fas fa-chevron-right"></i></div>
