--- a/Mukti.html
+++ b/Mukti.html
@@ -32,7 +32,7 @@
   <a class="back" href="index.html"><i class="fas fa-chevron-left"></i>Go Back</a>
 
   <!-- Cover image -->
-  <iframe 
+  <!-- <iframe 
     width="100%" 
     height="550" 
     src="https://www.youtube.com/embed/rlG3qNHJ7qI?si=XC_6vin_RgPfAggn" 
@@ -41,6 +41,14 @@
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
     referrerpolicy="strict-origin-when-cross-origin" 
     allowfullscreen>
+  </iframe> -->
+  <iframe width="100%"  
+  height="500"
+   src="https://www.youtube.com/embed/Qw7HzULBjnw?si=h--kCZHf7HErsQLw" 
+   title="YouTube video player"
+    frameborder="0" 
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
   </iframe>
 
   <!-- <h1 class="outline-shadow">Mukti</h1> -->
